succeeded to build image

--- a/etc/apache2/sites-available/IDES-Data-Preparation-Php-sample.conf
+++ b/etc/apache2/sites-available/IDES-Data-Preparation-Php-sample.conf
@@ -1,8 +1,8 @@
 # Test with     apachectl configtest ...
 # Include from /etc/apache2/conf-enabled/ffa-mfe.conf via     Include ...
 <IfModule mod_alias.c>
-        Alias /IDES-Data-Preparation-Php /home/ubuntu/IDES-Data-Preparation-Php/var/www/
-        <Directory /home/ubuntu/IDES-Data-Preparation-Php/var/www/>
+        Alias / /var/lib/IDES/www/
+        <Directory /var/lib/IDES/www/>
                 Require all granted
         </Directory>
 </IfModule>
