--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 vendor
-bkp/*.zip
-downloads/FATCA IDES SENDER FILE METADATA XML LIBRARY/
-downloads/FATCA XML Schema v1.1/
-downloads/FATCASenderFileMetadataSample_1.1_CAR.xml
-downloads/FATCASenderFileMetadataSample_1.1_NTF.xml
-downloads/FATCASenderFileMetadataSample_1.1_RPT.xml
-downloads/FATCAXMLSchemav1.zip
-downloads/SenderMetadatav1.1.zip
-downloads/encryption-service_services_irs_gov.crt
+ws/bkp/*.zip
+ws/downloads/FATCA IDES SENDER FILE METADATA XML LIBRARY/
+ws/downloads/FATCA XML Schema v1.1/
+ws/downloads/FATCASenderFileMetadataSample_1.1_CAR.xml
+ws/downloads/FATCASenderFileMetadataSample_1.1_NTF.xml
+ws/downloads/FATCASenderFileMetadataSample_1.1_RPT.xml
+ws/downloads/FATCAXMLSchemav1.zip
+ws/downloads/SenderMetadatav1.1.zip
+ws/downloads/encryption-service_services_irs_gov.crt
