--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   ],
   "require": {
     "shadiakiki1986/fatca-ides-php": "dev-master",
-    "monolog/monolog": "^1.19",
-    "shadiakiki1986/XSD-to-PHP": "dev-master"
+    "monolog/monolog": "^1.21",
+    "shadiakiki1986/XSD-to-PHP": "dev-master",
+    "shadiakiki1986/swiftmailer-wrapper": "dev-master"
   }
 }
