updating code for v2 and no downloader

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
 vendor
-cache/bkp/*.zip
-cache/downloads/FATCA IDES SENDER FILE METADATA XML LIBRARY/
-cache/downloads/FATCA XML Schema v1.1/
-cache/downloads/FATCASenderFileMetadataSample_1.1_CAR.xml
-cache/downloads/FATCASenderFileMetadataSample_1.1_NTF.xml
-cache/downloads/FATCASenderFileMetadataSample_1.1_RPT.xml
-cache/downloads/FATCAXMLSchemav1.zip
-cache/downloads/SenderMetadatav1.1.zip
-cache/downloads/encryption-service_services_irs_gov.crt
-etc/ssl
+cache/
+etc/ssl/
+*swp
